# agent-cubicle

./: .env.example  .gitignore  CLAUDE.md  DOCKER_SETUP.md  Dockerfile.claude  Dockerfile.claude-base  Dockerfile.claude-code  Dockerfile.claude-python  Dockerfile.claude-ruby  Dockerfile.codex  Dockerfile.codex-base  Dockerfile.codex-python  Dockerfile.codex-ruby  Dockerfile.copilot  Dockerfile.copilot-base  Dockerfile.copilot-python  Dockerfile.copilot-ruby  Dockerfile.gemini  Dockerfile.gemini-base  Dockerfile.gemini-python  Dockerfile.gemini-ruby  GEMINI.md  Makefile  README.md  agent-cubicle.sh  cubicle  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
agents/: BASE_AGENT.md
chatmodes/: ruby-research-and-plan.chatmode.md
config/claude/: settings.json
config/codex/: config.toml
config/copilot/: mcp-config.json.template
config/shared/: BASE_AGENT.md
configs/claude/: settings.json
configs/codex/: config.toml
configs/copilot/: config.json  mcp-config.json
configs/gemini/: settings.json  trusted_hooks.json
containers/: Dockerfile.claude-base  Dockerfile.claude-node  Dockerfile.claude-python  Dockerfile.codex-base  Dockerfile.codex-python  Dockerfile.copilot-base  Dockerfile.copilot-python  Dockerfile.copilot-ruby  Dockerfile.gemini-base  Dockerfile.gemini-python  Dockerfile.gemini-ruby
doc/: AGENT_HOOKS.md  AGENT_HOOKS_PLAN.md  CLI.md
hooks/: cubicle_hook.py  db.py  verify_hooks.py
plugins/quant-tutor/: NOTES.md  README.md
prompts/: new-react-form-component.prompt.md
tests/: test_cli.py  test_hooks.py
(+37 files in other folders)
