[project]
name = "cubicle"
version = "0.1.0"
description = "Local harness for repo-managed AI coding agent configuration"
readme = "README.md"
requires-python = ">=3.9.2"
license = {text = "MIT"}
dependencies = [
  "ollama",
  "openrouter",
  "dotenv",
  "requests"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cubicle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[project.scripts]
cubicle = "cubicle.cli:main"
